--- a/client/public/index.html
+++ b/client/public/index.html
@@ -5,12 +5,11 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <link rel="stylesheet" href="https://bootswatch.com/4/flatly/bootstrap.min.css">
+    <link rel="stylesheet" href="https://bootswatch.com/4/lux/bootstrap.min.css">
     <link rel="stylesheet" href="https://bootswatch.com/_vendor/jquery/dist/jquery.min.js">
     <link rel="stylesheet" href="https://bootswatch.com/_vendor/popper.js/dist/umd/popper.min.js">
-    <link rel="stylesheet" href="bootstrap.min.js">
+    <link rel="stylesheet" href="https://bootswatch.com/_vendor/bootstrap/dist/js/bootstrap.min.js">
     <link rel="stylesheet" href="../src/index.css">
-    <link rel="stylesheet" href="../src/App.css">
 
     <title>BWC: Binge Watch Club</title>
   </head>
