--- a/client/public/index.html
+++ b/client/public/index.html
@@ -23,5 +23,5 @@
     <div id="root"></div>
   </body>
   <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
-
+<!-- Photo by Kelly Sikkema on Unsplash -->
 </html>
