--- a/client/public/index.html
+++ b/client/public/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://bootswatch.com/_vendor/popper.js/dist/umd/popper.min.js">
     <link rel="stylesheet" href="https://bootswatch.com/_vendor/bootstrap/dist/js/bootstrap.min.js">
     <link rel="stylesheet" href="../src/index.css">
-    <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+    <!-- <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script> -->
 
 
     <title>BWC: Binge Watch Club</title>
@@ -22,6 +22,6 @@
     </noscript>
     <div id="root"></div>
   </body>
-  <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+  <!-- <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script> -->
 <!-- Photo by Kelly Sikkema on Unsplash -->
 </html>
